--- a/burger-queen/src/styles/Limpieza.css
+++ b/burger-queen/src/styles/Limpieza.css
@@ -1,10 +1,43 @@
+@media screen and (min-width:320px){
+        .Limpieza{
+          padding: 10px;
+          max-width: 318px;
+          width: 50%;
+        }
+      }
+      
+      @media screen and (min-width:480px){
+        .Limpieza {
+          padding: 1em;
+          height: 100%;
+          width: 100%;
+        }
+      }
+      
+      @media screen and (min-width:768px){
+        .Limpieza {
+          padding: 2em;
+          height: 100%;
+          width: 100%;
+        }
+      }
+      
+      @media screen and (min-width:1024px){
+        .Limpieza {
+          padding: 2em;
+          height: 100%;
+          width: 100%;
+        }
+      }
+
+
 .Limpieza{
-        width: 150%;
-        max-width: 500px;
+        width: 100%;
+        max-width: 600px;
         padding: 45px;
         margin: auto;
         margin-top: 4%;
-        height: 150%;
+        height: 100%;
         text-align: center;
         background: #ffffff;
         -webkit-box-shadow: 0px 6px 79px 7px rgba(0,0,0,0.75);
@@ -20,6 +53,6 @@
         padding: 10px;
         margin: auto;
         display:flex;
-       margin-top: 80px;
+       margin-top: 40px;
     
     }
