--- a/burger-queen/src/styles/ListaIngredientes.css
+++ b/burger-queen/src/styles/ListaIngredientes.css
@@ -1,5 +1,5 @@
 @media screen and (min-width:320px){
-    .login-form {
+    .Lista_Ingredientes{
       padding: 10px;
       max-width: 318px;
       width: 50%;
@@ -7,7 +7,7 @@
   }
   
   @media screen and (min-width:480px){
-    .login-form {
+    .Lista_Ingredientes {
       padding: 1em;
       height: 100%;
       width: 100%;
@@ -15,7 +15,7 @@
   }
   
   @media screen and (min-width:768px){
-    .login-form {
+    .Lista_Ingredientes {
       padding: 2em;
       height: 100%;
       width: 100%;
@@ -23,7 +23,7 @@
   }
   
   @media screen and (min-width:1024px){
-    .login-form {
+    .Lista_Ingredientes {
       padding: 2em;
       height: 100%;
       width: 100%;
@@ -32,12 +32,12 @@
 
 
 .Lista_Ingredientes{
-    width: 150%;
-    max-width: 500px;
+    width: 100%;
+    max-width: 600px;
     padding: 45px;
     margin: auto;
     margin-top: 4%;
-    height: 150%;
+    height: 100%;
     text-align: center;
     background: #ffffff;
     -webkit-box-shadow: 0px 6px 79px 7px rgba(0,0,0,0.75);
