--- a/burger-queen/src/styles/TipsCocina.css
+++ b/burger-queen/src/styles/TipsCocina.css
@@ -1,13 +1,14 @@
 @media screen and (min-width:320px){
-    .login-form {
+    .Tips_Cocina {
       padding: 10px;
       max-width: 318px;
       width: 50%;
+     
     }
   }
   
   @media screen and (min-width:480px){
-    .login-form {
+    .Tips_Cocina {
       padding: 1em;
       height: 100%;
       width: 100%;
@@ -15,7 +16,7 @@
   }
   
   @media screen and (min-width:768px){
-    .login-form {
+    .Tips_Cocina {
       padding: 2em;
       height: 100%;
       width: 100%;
@@ -23,7 +24,7 @@
   }
   
   @media screen and (min-width:1024px){
-    .login-form {
+    .Tips_Cocina {
       padding: 2em;
       height: 100%;
       width: 100%;
@@ -32,12 +33,12 @@
 
 
 .Tips_Cocina{
-    width: 150%;
-    max-width: 500px;
+    width: 100%;
+    max-width: 600px;
     padding: 45px;
     margin: auto;
     margin-top: 4%;
-    height: 150%;
+    height: 100%;
     text-align: center;
     background: #ffffff;
     -webkit-box-shadow: 0px 6px 79px 7px rgba(0,0,0,0.75);
